<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    tools:context=".activities.SettingsActivity">

    <LinearLayout
        android:id="@+id/settings_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings_title"
            android:textColor="#565656"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/settings_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:text="@string/settings_description"
            android:textColor="#7E7E7E"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/settings_pref"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_header"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/show_phone_number_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_phone_number"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/show_phone_number_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:thumbTint="#0083DA" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/show_email_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_email"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/show_email_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:thumbTint="#0083DA" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/show_birthday_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_birthday"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/show_birthday_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:thumbTint="#0083DA" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="50dp"
            android:orientation="horizontal"
            android:paddingTop="8dp">

            <TextView
                android:id="@+id/show_gender_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show_gender"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/show_gender_toggle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:thumbTint="#0083DA" />

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_settings_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/settings_pref"
        android:layout_marginTop="16dp"
        android:backgroundTint="#0083DA"
        android:paddingVertical="15dp"
        android:text="@string/save_settings"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/settings_logoutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:backgroundTint="#D24949"
        android:paddingVertical="15dp"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold" />


</RelativeLayout>
